next/src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@tailwind variants;

@layer base {
  /* don't use layers, they're absolutely useless when using css modules, not sure why they exist */
}

body {
  @apply bg-black text-white;
}

/* utility classes */
.text-2xs {
  font-size: .6rem;
  line-height: .8rem;
}

.text-shadow {
  text-shadow: black -1px -1px 1px, black 1px -1px 1px, black -1px 1px 1px, black 1px 1px 1px, black -1px 0 0px;
}

.item {
  text-shadow: black -1px -1px 1px, black 1px -1px 1px, black -1px 1px 1px, black 1px 1px 1px, black -1px 0 0px;
}

.item-tooltip {
  text-shadow: black -1px -1px 1px, black 1px -1px 1px, black -1px 1px 1px, black 1px 1px 1px, black -1px 0 0px;
}

.fade-out {
  animation: fadeOut 1s normal forwards;
}

.grow {
  animation: grow 1s normal forwards;
}

.grow.fade-out{
  animation: grow 1s normal forwards, fadeOut 1s normal forwards;
}

.grow.move-up{
  animation: grow 1s normal forwards, moveUp 1s normal forwards;
}

.move-up.fade-out{
  animation: fadeOut 1s normal forwards, moveUp 1s normal forwards;
}

.move-up{
  animation: moveUp 1s normal forwards;
}

@keyframes fadeIn {
  0% { opacity: 0; }
  100% { opacity: 1; }
}

@keyframes fadeOut {
  0% { 
    opacity: 1;
  }
  100% { 
    opacity: 0; 
  }
}

@keyframes grow{
  0% {
    transform: scale(1);
  }
  50%{
    transform: scale(2);
  }
  100% {
    transform: scale(1);
  }
}

@keyframes moveUp{
  0% { 
    transform: translateY(0);
  }
  100% { 
    transform: translateY(-2rem);
  }
}

.img-drop-shadow {
  filter: drop-shadow(3px 5px 2px rgb(0 0 0 / 0.4));
}

